applications/openBao/30_softhsm_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: softhsm
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: softhsm
  template:
    metadata:
      labels:
        app: softhsm
    spec:
      containers:
        - name: softhsm
          image: vegardit/softhsm2-pkcs11-proxy:2.x-alpine
          volumeMounts:
            - name: data
              mountPath: /var/lib/softhsm
            - name: openbao-softhsm-secret
              mountPath: "/etc/softhsm/"
              readOnly: true
          command: ["/bin/bash","-c"]
          args:
            - |
              /opt/run.sh || true;
              sleep infinity
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: softhsm-pvc
        - name: openbao-softhsm-secret
          secret:
            secretName: openbao-softhsm-secret
      restartPolicy: Always
---
